--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My app</title>
-    <link rel="stylesheet" href="graphics/styles/main.css">
-</head>
-<body>
-    
-    <div id="app"></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>My app</title>
+		<link rel="stylesheet" href="graphics/styles/main.css" />
+	</head>
+	<body>
+		<div id="app"></div>
 
-    <script src="./lib/vue.js"></script>
-    <script src="./lib/vue-router.js"></script>
-    <script type="module" src="./js/main.js"></script>
-</body>
+		<script src="./lib/vue.js"></script>
+		<script src="./lib/vue-router.js"></script>
+		<script type="module" src="./js/main.js"></script>
+	</body>
 </html>
