--- a/tst.html
+++ b/tst.html
@@ -8,49 +8,23 @@
 	</head>
 	<body>
 		<iframe
-			width="336"
-			height="189"
-			src="https://www.youtube.com/embed/hFFopPPrGiE"
-			title="YouTube video player"
-			frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381.361048929129!2d34.79012768482978!3d32.05948208119463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d4b71d3251013%3A0xf0063ca2d3229c98!2z15zXlCDXkteV15XXkNeo15PXmdeUIDE1LCDXqtecINeQ15HXmdeRLdeZ16TXlQ!5e0!3m2!1siw!2sil!4v1656751341295!5m2!1siw!2sil"
+			width="400"
+			height="300"
+			style="border: 0"
+			allowfullscreen=""
+			loading="lazy"
+			referrerpolicy="no-referrer-when-downgrade"
 		></iframe>
 		<iframe
-			width="560"
-			height="315"
-			src="https://www.youtube.com/embed/i_AypSKBmis"
-			title="YouTube video player"
-			frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen
-		></iframe>
-		<iframe
-			width="560"
-			height="315"
-			src="https://www.youtube.com/embed/P701paKEMXs"
-			title="YouTube video player"
-			frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen
-		></iframe>
-		<iframe
-			width="560"
-			height="315"
-			src="https://www.youtube.com/embed/tf20S1RYrMY"
-			title="Ghost In The Shell — Death By Invisibility | Anatomy Of A Failure"
-			frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen
-		></iframe>
-		<iframe
-			width="560"
-			height="315"
-			src="https://www.youtube.com/embed/WF9_RlW9frE"
-			title="AMERICAN PSYCHO: How a box office failure became the most important film of a generation"
-			frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen
+			src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3381.3680378173326!2d34.787887!3d32.059293!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d4b73fa9fb5ff%3A0xd6a6ff1050208cbb!2z15nXldeX16DXoNeV16M!5e0!3m2!1siw!2sil!4v1656754029016!5m2!1siw!2sil"
+			width="600"
+			height="450"
+			style="border: 0"
+			allowfullscreen=""
+			loading="lazy"
+			referrerpolicy="no-referrer-when-downgrade"
 		></iframe>
 	</body>
 </html>
+https://goo.gl/maps/uyLuCTVdkQWcQuqZ6
